@@ -1,8 +1,18 @@
 Thu Feb 13 09:02:25 1997  Samuel Tardieu  <sam@inf.enst.fr>
 
+	* s-garhea.ads: New function to check for termination.
+
+	* s-garhea.adb: Ditto.
+
+	* s-gartcp.adb: Protect block to prevent a race condition during
+	  termination (see comment). This may or may not fix the problem,
+	  anyway this is not blocking for the release.
+
+	* Makefile.am: Don't compile s-ganobl.ad[bs] when not needed.
+
 	* 2wgarcon.ads: New file containing precomputed Windows constants
 	  (due to a bug in Cygnus' <sys/socket.h>, this file cannot be
-	  generated automatically without patching this file).
+	  generated automatically without patching the header file).
 
 Wed Feb 12 11:52:46 1997  Samuel Tardieu  <sam@inf.enst.fr>
 
